[package]
name = "async-once-cell"
version = "0.4.4"
authors = ["Daniel De Graaf <code@danieldg.net>"]
license = "MIT OR Apache-2.0"
edition = "2018"

description = "Async single assignment cells and lazy values."
readme = "README.md"
documentation = "https://docs.rs/async_once_cell"

repository = "https://github.com/danieldg/async-once-cell"
keywords = ["lazy", "static", "async"]
categories = ["rust-patterns", "memory-management"]

[features]
unpin = ['std']
critical-section = ['dep:critical-section']
std = []

[dependencies]
critical-section = { version = "1", optional = true }

[package.metadata.docs.rs]
all-features = true
